# trading

./: LICENSE  pyproject.toml
src/: __main__.py  data.py  model.py
